// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/discourse/fetch snapshot testing loads a particular post from snapshot 1`] = `
Object {
  "authorUsername": "d11",
  "cooked": "<p>This is a test post.</p>",
  "id": 14,
  "indexWithinTopic": 1,
  "replyToPostIndex": null,
  "timestampMs": 1564744349476,
  "topicId": 11,
}
`;

exports[`plugins/discourse/fetch snapshot testing loads a particular topic from snapshot 1`] = `
Object {
  "posts": Array [
    Object {
      "authorUsername": "d11",
      "cooked": "<p>This is a test post.</p>",
      "id": 14,
      "indexWithinTopic": 1,
      "replyToPostIndex": null,
      "timestampMs": 1564744349476,
      "topicId": 11,
    },
    Object {
      "authorUsername": "dl-proto",
      "cooked": "<p>Ah, an excellent post. I will like it and reply.</p>",
      "id": 16,
      "indexWithinTopic": 2,
      "replyToPostIndex": null,
      "timestampMs": 1564744496285,
      "topicId": 11,
    },
    Object {
      "authorUsername": "d11",
      "cooked": "<p>Adding another post, after having deleted a whole thread.</p>",
      "id": 22,
      "indexWithinTopic": 3,
      "replyToPostIndex": null,
      "timestampMs": 1564951839667,
      "topicId": 11,
    },
  ],
  "topic": Object {
    "authorUsername": "d11",
    "id": 11,
    "timestampMs": 1564744349408,
    "title": "My First Test Post",
  },
}
`;

exports[`plugins/discourse/fetch snapshot testing loads latest posts from snapshot 1`] = `
Array [
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Adding another post, after having deleted a whole thread.</p>",
    "id": 22,
    "indexWithinTopic": 3,
    "replyToPostIndex": null,
    "timestampMs": 1564951839667,
    "topicId": 11,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<aside class=\\"quote no-group\\" data-post=\\"1\\" data-topic=\\"13\\">
<div class=\\"title\\">
<div class=\\"quote-controls\\"></div>
<img alt width=\\"20\\" height=\\"20\\" src=\\"https://avatars.discourse.org/v4/letter/d/8797f3/40.png\\" class=\\"avatar\\"> dl-proto:</div>
<blockquote>
<p>Here is a link to another discourse thread:</p>
</blockquote>
</aside>
<p>Excellent link. I’ve quoted you.</p>",
    "id": 18,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1564744591313,
    "topicId": 13,
  },
  Object {
    "authorUsername": "dl-proto",
    "cooked": "<p>Here is a link to another discourse thread: <a href=\\"https://sourcecred-test.discourse.group/t/my-first-test-post/11/3\\" class=\\"inline-onebox\\">My First Test Post</a></p>
<p>Here is a link to a GitHub issue: <a href=\\"https://github.com/sourcecred-test/example-github/issues/1\\" rel=\\"nofollow noopener\\">https://github.com/sourcecred-test/example-github/issues/1</a></p>",
    "id": 17,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1564744553905,
    "topicId": 13,
  },
  Object {
    "authorUsername": "dl-proto",
    "cooked": "<p>Ah, an excellent post. I will like it and reply.</p>",
    "id": 16,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1564744496285,
    "topicId": 11,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>This is a test post.</p>",
    "id": 14,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1564744349476,
    "topicId": 11,
  },
  Object {
    "authorUsername": "system",
    "cooked": "<p>This is a test instance.<br>
The first paragraph of this pinned topic will be visible as a welcome message to all new visitors on your homepage. It’s important!</p>
<p><strong>Edit this</strong> into a brief description of your community:</p>
<ul>
<li>Who is it for?</li>
<li>What can they find here?</li>
<li>Why should they come here?</li>
<li>Where can they read more (links, resources, etc)?</li>
</ul>
<p><img src=\\"https://sjc3.discourse-cdn.com/free1/images/welcome/discourse-edit-post-animated.gif\\" width=\\"508\\" height=\\"106\\"></p>
<p>You may want to close this topic via the admin <img src=\\"https://sjc3.discourse-cdn.com/free1/images/emoji/twitter/wrench.png?v=9\\" title=\\":wrench:\\" class=\\"emoji\\" alt=\\":wrench:\\"> (at the upper right and bottom), so that replies don’t pile up on an announcement.</p>",
    "id": 10,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1554236412933,
    "topicId": 7,
  },
  Object {
    "authorUsername": "system",
    "cooked": "<p>Discussion about this site, its organization, how it works, and how we can improve it.</p>",
    "id": 1,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1554236409844,
    "topicId": 1,
  },
]
`;

exports[`plugins/discourse/fetch snapshot testing loads user likes from snapshot 1`] = `
Array [
  Object {
    "postId": 14,
    "timestampMs": 1564744498189,
    "username": "dl-proto",
  },
]
`;
